@@ -1,3 +1,9 @@
+2009-06-02  Alexandre Oliva  <aoliva@redhat.com>
+
+	* Makefile.tpl ([+compare-target+]): Compare all stage
+	directories, rather than just gcc.
+	* Makefile.in: Rebuilt.
+
 2009-05-28  Doug Kwan  <dougkwan@google.com>
 
 	* configure.ac: Support gold for target arm*-*-*.
